zoo-modal improvements: - add `zoo-modal-z-index` CSS variable to control z-index in case of conflict with other components - ptional `button-closeable` attribute to prevent closing of modal when clicking on box overlay area - fix duplicated click event listener on added on every modal opening

--- a/src/zoo-modules/misc/modal/modal.css
+++ b/src/zoo-modules/misc/modal/modal.css
@@ -10,7 +10,7 @@
 	background: rgba(0, 0, 0, var(--zoo-modal-opacity, 0.8));
 	opacity: 0;
 	transition: opacity 0.3s;
-	z-index: 9999;
+	z-index: var(--zoo-modal-z-index, 9999);
 	left: 0;
 	top: 0;
 	display: flex;
